--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,22 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run: echo Hello
+      
   print_world:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - run: echo World
+      
+  print_env:
+    docker:
+      - image: cimg/base:2020.01
+    steps:
+      - checkout
+      - run:
+          name: "echo an env var that is part of our project"
+          command: |
+            echo $MY_ENV_VAR
 
 
 workflows:
@@ -19,3 +30,4 @@ workflows:
       - print_hello
       - print_world:
             requires: [print_hello]
+      - print_env:
