--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
           id: << pipeline.id >>
   
   roll_back:
+    docker:
+      - image: circleci/node:13.8.0
     steps:
       - run:
           name: Testing application
